--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ body, html {
   overflow-x: hidden;
 }
 
+/* Estilo adicional para remover margens e preenchimentos */
 body, #root {
   margin: 0;
   padding: 0;
@@ -39,15 +40,6 @@ body, #root {
   align-items: center;
 }
 
-/*.partePrincipal{
-  width: 100%;
-  height: 90%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  background-color: #004A8D;
-}*/
 
 .partePrincipal {
   display: flex;
